@startuml
UserApplicationService x--> UserUpdateCommand: 更新データ取得
UserApplicationService x--> User: 値を利用する(値更新)
UserApplicationService x--> UserRepository: ユーザを取得、及びユーザを上書き保存
UserRepository .> User: 値の依存
User <. UserUpdateCommand: 値の依存

class UserUpdateCommand {
  - email: string
  - name: string
  - address: string
}
class User {
  - userName: UserName
  - userID: UserID
  - userMail: UserMail
  - userAddress: UserAddress
  + ChangeName(userName UserName) error
  + ChangeEmail(email UserMail) error
  + ChangeAddress(address UserAddress) error
}
class UserApplicationService {
  - userRepository: UserRepository
  - userService: UserService
  + Update(cmd UserUpdateCommand) error
}
interface UserRepository {
  FindByID(id UserID) (*User, error)
  FindByName(name UserName) (*User, error)
  Save(user User) error
}
@enduml
